--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<! <!DOCTYPE html>
 <html>
-<head>
-  <title>Daniel Williams</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-</body>
+  <head>
+    <title>Daniel Williams</title>
+  </head>
+  <body>
+    <<h1>London</h1>
+  </body>
 </html>
