--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <head>
     <title>Daniel Williams</title>
   </head>
-  <body style='background-color:#000000'>
+  <body style='background-color:#000000;'>
   </body>
 </html>
