--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Daniel Williams</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body style='background-color:#000000;'>
   </body>
