--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<! <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Daniel Williams</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   </head>
-  <body style='background-color:#000000;'>
-  </body>
+  <body style='background-color:#000000;'></body>
 </html>
