--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Daniel Williams</title>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href=".favicon.ico">
+    <link rel='stylesheet' type="text/css" href=".index.css">
   </head>
   <body style='background-color:#000000;'></body>
 </html>
