--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <title>Daniel Williams</title>
     <link rel="shortcut icon" type="image/x-icon" href=".favicon.ico">
     <link rel='stylesheet' type="text/css" href=".index.css">
-  </head>
-  <body style='background-color:#000000;'></body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+  <body>
+      <div>
+        <output id='output1'>Daniel Williams, London</output>
+      </div>
+</body>
 </html>
