--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Daniel Williams</title>
-    <link rel="shortcut icon" type="image/x-icon" href=".favicon.ico">
-    <link rel='stylesheet' type="text/css" href=".index.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+  <title>Daniel Williams</title>
+  <link rel="shortcut icon" type="image/x-icon" href=".favicon.ico">
+  <link rel="stylesheet" type="text/css" href=".index.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-  <body>
-      <div>
-        <output id='output1'>Daniel Williams, London</output>
-      </div>
+<body>
+  <div>
+    <output>Daniel Williams, London</output>
+  </div>
 </body>
 </html>
