--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Daniel Williams</title>
   <link rel="shortcut icon" type="image/x-icon" href=".favicon.ico">
-  <link rel="stylesheet" type="text/css" href=".index.css">
+  <link rel="stylesheet" type="text/css" href="index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
