--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id='#Absolute-Center'>
-    <output>Daniel Williams, London</output>
+    <output>Daniel Williams &mdash; London</output>
   </div>
 </body>
 </html>
