--- a/index.html
+++ b/index.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Daniel Williams</title>
-  <link rel="shortcut icon" type="image/x-icon" href=".favicon.ico">
-  <link rel="stylesheet" type="text/css" href="index.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-  <div id='#Absolute-Center'>
-    <output>Daniel Williams &mdash; London</output>
-  </div>
-</body>
+  <head>
+    <title>Daniel Williams</title>
+  </head>
+  <body style='background-color:#000000;'></body>
 </html>
